# ir-project

./: .gitignore  README.md  api_main.py  build_database.py  pyproject.toml  setup.py  test_cluster_standalone.py
ir-front-end/: API_INTEGRATION.md  index.html  pnpm-lock.yaml
ir-front-end/src/: App.tsx  index.css
ir-front-end/src/components/: Layout.tsx
ir-front-end/src/config/: api.ts
ir-front-end/src/context/: SearchContext.tsx  ThemeContext.tsx
ir-front-end/src/pages/: Document.tsx  Home.tsx  Results.tsx
ir-front-end/src/services/: api.ts
notebooks/: Evaluation.ipynb  IR Environment Setup.ipynb  query_suggestion.ipynb
src/: __init__.py  api_main.py  config.py  ir_engine.py  loader.py  main.py  requirements.txt  run_clustering.py  test.py  test_query_suggestion.py
src/database/: __init__.py  db_connector.py
src/gui/: __init__.py  gui.py  ir_engine.py
src/services/: __init__.py  query_suggestion_service.py
src/services/offline_vectorizers/: __init__.py  bm25.py  embedding.py  hybrid.py  tfidf.py
src/services/online_vectorizers/: Retriever.py  __init__.py  bm25.py  cluster_search.py  clustered_embedding.py  embedding.py  hybrid.py  inverted_index.py  tfidf.py
src/services/processing/: __init__.py  antique_preprocessor.py  bm25_preprocessing.py  docs_processor.py  preprocessing.py  text_preprocessor.py
